# CANVis

./: .gitignore  CMakeLists.txt
include/: CAN.h  Window.h  globals.h  usb2can.h
src/: CAN.cpp  Window.cpp  main.cpp
